--- a/Dockerfile.loader
+++ b/Dockerfile.loader
@@ -1,10 +1,7 @@
 # Dockerfile which loads and indexes new data into empty data container image
 MAINTAINER Reittiopas version: 0.1
 
-ENV DOCKER_USER
-ENV DOCKER_AUTH
-ENV DOCKER_TAG
-ENV ORG="hsldevcom"
+ARG ORG="hsldevcom"
 
 FROM ${ORG}/pelias-data-container-base
 
