Remove ORG parametrization (looks like setting base image must be the first cmd)

--- a/Dockerfile.loader
+++ b/Dockerfile.loader
@@ -1,10 +1,10 @@
+FROM hsldevcom/pelias-data-container-base
+
 # Dockerfile which loads and indexes new data into empty data container image
 MAINTAINER Reittiopas version: 0.1
-
-ARG ORG="hsldevcom"
-
-FROM ${ORG}/pelias-data-container-base
 
 RUN /bin/bash -c "source /mnt/tools/scripts/getdata.sh"
 
 #entrypoint (elasticsearch) comes from base image
+
+USER 9999
