--- a/Dockerfile.base
+++ b/Dockerfile.base
@@ -25,7 +25,7 @@ ADD wof_data /mnt/data/whosonfirst/wof_data
 
 # Download and index data and do cleanup for temp data + packages
 RUN mkdir -p /mnt/tools/scripts
-ADD scripts/*.sh /mnt/tools/scripts/
+ADD scripts/* /mnt/tools/scripts/
 RUN /bin/bash -c "source /mnt/tools/scripts/install-tools.sh"
 
 RUN chmod -R a+rwX /var/lib/elasticsearch/ \
