--- a/Dockerfile.loader
+++ b/Dockerfile.loader
@@ -1,5 +1,7 @@
 FROM hsldevcom/pelias-data-container-base
 
+ARG MMLAPIKEY
+
 # Dockerfile which loads and indexes new data into empty data container image
 MAINTAINER Reittiopas version: 0.1
 
