--- a/Dockerfile.base
+++ b/Dockerfile.base
@@ -1,13 +1,23 @@
 # Dockerfile which provides the search engine with data indexing tools
 
-FROM bitnami/elasticsearch:7.5.2
+FROM debian:buster-slim
 MAINTAINER Reittiopas version: 0.1
+
+# Download and index data and do cleanup for temp data + packages
+RUN mkdir -p /mnt/tools/scripts
+ADD scripts/* /mnt/tools/scripts/
+RUN /bin/bash -c "source /mnt/tools/scripts/install-tools.sh"
+
+RUN curl -sS -O -L --fail https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-7.5.2-amd64.deb \
+ && curl -sS -O -L --fail https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-7.5.2-amd64.deb.sha512 \
+ && shasum -a 512 -c elasticsearch-7.5.2-amd64.deb.sha512 \
+ && dpkg -i elasticsearch-7.5.2-amd64.deb
 
 # Finalize elasticsearch installation
 ADD config/elasticsearch.yml /usr/share/elasticsearch/config/
 
 # Add elastisearch-head plugin for browsing ElasticSearch data
-RUN chmod +wx /usr/share/elasticsearch/plugins/
+# RUN chmod +wx /usr/share/elasticsearch/plugins/
 RUN /usr/share/elasticsearch/bin/elasticsearch-plugin install analysis-icu
 
 RUN mkdir -p /var/lib/elasticsearch/pelias_data \
@@ -21,11 +31,6 @@ ADD finland.polylines /mnt/data/finland.polylines
 
 RUN mkdir -p /mnt/data/whosonfirst
 ADD wof_data /mnt/data/whosonfirst/wof_data
-
-# Download and index data and do cleanup for temp data + packages
-RUN mkdir -p /mnt/tools/scripts
-ADD scripts/* /mnt/tools/scripts/
-RUN /bin/bash -c "source /mnt/tools/scripts/install-tools.sh"
 
 RUN chmod -R a+rwX /var/lib/elasticsearch/ \
   && chown -R 9999:9999 /var/lib/elasticsearch/
