Launch data container service using service cmd

--- a/Dockerfile.loader
+++ b/Dockerfile.loader
@@ -8,5 +8,4 @@ MAINTAINER Reittiopas version: 0.1
 
 RUN /bin/bash -c "source /mnt/tools/scripts/getdata.sh"
 
-USER elasticsearch
-ENTRYPOINT ["elasticsearch"]
+ENTRYPOINT exec service elasticsearch
