Proper way to start ES container
Process must not exit, so sleep at the end

--- a/Dockerfile.loader
+++ b/Dockerfile.loader
@@ -8,4 +8,5 @@ MAINTAINER Reittiopas version: 0.1
 
 RUN /bin/bash -c "source /mnt/tools/scripts/getdata.sh"
 
-ENTRYPOINT exec service elasticsearch
+ENTRYPOINT ["service elasticsearch && sleep 10000d"]
+
