--- a/Dockerfile.pelias-data-container-builder
+++ b/Dockerfile.pelias-data-container-builder
@@ -1,6 +1,6 @@
 # Dockerfile for image which runs the data loader and builds and deploys the final image
 
-FROM docker:18.06
+FROM docker:20.10.7-dind
 
 WORKDIR /mnt
 
@@ -8,10 +8,11 @@ ADD Dockerfile.loader ${WORKDIR}
 ADD scripts/build-data-container.sh ${WORKDIR}
 ADD pelias.json ${WORKDIR}
 
-RUN apk add --no-cache alpine-sdk bash bc curl git jq python sed grep coreutils nodejs nodejs-npm
+RUN apk add --no-cache alpine-sdk bash bc curl git jq python2 sed grep coreutils nodejs nodejs-npm
 
 RUN git clone --single-branch https://github.com/hsldevcom/pelias-fuzzy-tests \
   && cd pelias-fuzzy-tests \
   && npm install
 
-ENTRYPOINT ["/mnt/build-data-container.sh" ]
+CMD ( dockerd-entrypoint.sh & ) && sleep 20 && unset DOCKER_HOST && /bin/bash /mnt/build-data-container.sh
+
