feat: load private GTFS packages into search, too

--- a/Dockerfile.loader
+++ b/Dockerfile.loader
@@ -2,6 +2,7 @@ ARG DOCKER_TAG=latest
 FROM hsldevcom/pelias-data-container-base:$DOCKER_TAG
 
 ARG MMLAPIKEY
+ARG GTFS_AUTH
 
 # Dockerfile which loads and indexes new data into empty data container image
 MAINTAINER Reittiopas version: 0.1
