add OSM filter parameters to build args

--- a/Dockerfile.loader
+++ b/Dockerfile.loader
@@ -3,6 +3,8 @@ FROM hsldevcom/pelias-data-container-base:$DOCKER_TAG
 
 ARG MMLAPIKEY
 ARG GTFS_AUTH
+ARG OSM_VENUE_FILTERS
+ARG OSM_ADDRESS_FILTERS
 
 # Dockerfile which loads and indexes new data into empty data container image
 MAINTAINER Reittiopas version: 0.1
