Add authorization keys for accessing digitransit apis

--- a/Dockerfile.loader
+++ b/Dockerfile.loader
@@ -6,6 +6,8 @@ ARG GTFS_AUTH
 ARG OSM_VENUE_FILTERS
 ARG OSM_ADDRESS_FILTERS
 ARG BUILDER_TYPE
+ARG API_SUBSCRIPTION_QUERY_PARAMETER_NAME
+ARG API_SUBSCRIPTION_TOKEN
 
 # Dockerfile which loads and indexes new data into empty data container image
 MAINTAINER Reittiopas version: 0.1
