--- a/.github/workflows/prod-pipeline.yml
+++ b/.github/workflows/prod-pipeline.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
       - name: Set time zone to Europe/Helsinki
         uses: zcong1993/setup-timezone@master
         with:
@@ -16,8 +16,8 @@ jobs:
       - name: Check Tag
         id: check-tag
         run: |
-          if [[ ${GITHUB_REF##*/} =~ ^202[0-9][0-1][0-9][0-3][0-9]$ ]]; then
-              echo ::set-output name=match::true
+          if [[ ${GITHUB_REF##*/} =~ ^202[0-9][0-1][0-9][0-3][0-9] ]]; then
+              echo "match=true" >> $GITHUB_OUTPUT
           fi
       - name: Push latest images as prod
         if: steps.check-tag.outputs.match == 'true'
