Update node and elastic versions
Elastic starts with these changes, but many things have changed.
Index creation and old queries do not work any more. Apparently needs
lots of work.

--- a/Dockerfile.loader
+++ b/Dockerfile.loader
@@ -17,4 +17,4 @@ RUN /bin/bash -c "source /mnt/tools/scripts/getdata.sh"
 EXPOSE 9200
 EXPOSE 9300
 
-CMD /etc/init.d/elasticsearch start && sleep 10000d
+CMD gosu elasticsearch /usr/share/elasticsearch/bin/elasticsearch
