--- a/Dockerfile.pelias-data-container-base
+++ b/Dockerfile.pelias-data-container-base
@@ -6,16 +6,20 @@ RUN mkdir -p /mnt/tools/scripts
 ADD scripts/* /mnt/tools/scripts/
 RUN /bin/bash -c "source /mnt/tools/scripts/install-tools.sh"
 
-RUN curl -sS -O -L --fail https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-7.16.2-amd64.deb \
- && curl -sS -O -L --fail https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-7.16.2-amd64.deb.sha512 \
- && shasum -a 512 -c elasticsearch-7.16.2-amd64.deb.sha512 \
- && dpkg -i elasticsearch-7.16.2-amd64.deb \
- && rm elasticsearch-7.16.2-amd64.deb \
- && rm elasticsearch-7.16.2-amd64.deb.sha512
+RUN set -eux; apt-get update; apt-get install -y gosu; rm -rf /var/lib/apt/lists/*;
+
+RUN curl -sS -O -L --fail https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-8.13.4-amd64.deb \
+ && curl -sS -O -L --fail https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-8.13.4-amd64.deb.sha512 \
+ && shasum -a 512 -c elasticsearch-8.13.4-amd64.deb.sha512 \
+ && dpkg -i elasticsearch-8.13.4-amd64.deb \
+ && rm elasticsearch-8.13.4-amd64.deb \
+ && rm elasticsearch-8.13.4-amd64.deb.sha512
 
 # Finalize elasticsearch installation
 ADD config/elasticsearch.yml /etc/elasticsearch/
 RUN /usr/share/elasticsearch/bin/elasticsearch-plugin install analysis-icu
+
+RUN /usr/share/elasticsearch/bin/elasticsearch-keystore remove xpack.security.http.ssl.keystore.secure_password
 
 RUN mkdir -p /var/lib/elasticsearch/pelias_data \
   && chown -R elasticsearch:elasticsearch /var/lib/elasticsearch/pelias_data
@@ -25,6 +29,6 @@ ADD pelias.json /root/pelias.json
 RUN mkdir -p /mnt/data
 
 RUN chmod -R a+rwX /var/lib/elasticsearch/ \
-  && chown -R 9999:9999 /var/lib/elasticsearch/
+  && chown -R elasticsearch:elasticsearch /var/lib/elasticsearch/
 
 ENV ES_HEAP_SIZE 2g
