--- a/Dockerfile.loader
+++ b/Dockerfile.loader
@@ -8,6 +8,7 @@ ARG OSM_ADDRESS_FILTERS
 ARG BUILDER_TYPE
 ARG API_SUBSCRIPTION_QUERY_PARAMETER_NAME
 ARG API_SUBSCRIPTION_TOKEN
+ARG EXTRA_SRC
 
 # Dockerfile which loads and indexes new data into empty data container image
 MAINTAINER Reittiopas version: 0.1
