--- a/Dockerfile.loader
+++ b/Dockerfile.loader
@@ -17,5 +17,6 @@ RUN /bin/bash -c "source /mnt/tools/scripts/getdata.sh"
 
 EXPOSE 9200
 EXPOSE 9300
+ENV ES_JAVA_OPTS="-Xms3g -Xmx3g"
 
 CMD /etc/init.d/elasticsearch start && sleep 10000d
