--- a/Dockerfile.pelias-data-container-base
+++ b/Dockerfile.pelias-data-container-base
@@ -22,7 +22,7 @@ RUN /usr/share/elasticsearch/bin/elasticsearch-plugin install analysis-icu
 RUN mkdir -p /var/lib/elasticsearch/pelias_data \
   && chown -R elasticsearch:elasticsearch /var/lib/elasticsearch/pelias_data
 
-RUN echo "vm.max_map_count=262144" >> /etc/sysctl.conf
+RUN chmod -R a+rwX /etc/sysctl.conf && chown -R 9999:9999 /etc/sysctl.conf
 
 # Copy pelias config file
 ADD pelias.json /root/pelias.json
