--- a/Dockerfile.loader
+++ b/Dockerfile.loader
@@ -19,4 +19,4 @@ EXPOSE 9200
 EXPOSE 9300
 ENV ES_JAVA_OPTS="-Xms4g -Xmx4g"
 
-CMD /etc/init.d/elasticsearch start && sleep 10000d
+CMD sysctl -w vm.max_map_count=262144 && /etc/init.d/elasticsearch start && sleep 10000d
